fix: home panel spacing

--- a/src/app/(frontend)/_components/DecentralizedPanel/DecentralizedPanel.module.scss
+++ b/src/app/(frontend)/_components/DecentralizedPanel/DecentralizedPanel.module.scss
@@ -44,6 +44,8 @@
 }
 
 .header {
+  position: relative;
+  left: -12px;
   margin-bottom: 0;
   transition: color $transition-snappy;
   color: $black;
